--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <input type="password" id="password" name="password" required />
       <button type="submit">Login User</button>
     </form>
-    <div id="errorMessages"></div>
-    <div id="successMessage"></div>
+    <div id="errormessages"></div>
+    <div id="successmessage"></div>
     <script src="./script/index-script.js"></script>
   </body>
 </html>
