--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <h1>Welcome to Frontend Homepage</h1>
     </header>
-    <form action="./loginuser.html" method="post">
+    <form action="/loginuser" method="post">
       <p>
         <label for="username">UserName:</label>
         <input type="text" id="username" name="username" required />
@@ -19,7 +19,7 @@
         <input type="password" id="password" name="password" required />
       </p>
       <button type="submit">Login User</button>
-      <button type="submit" formaction="./registeruser.html">Register</button>
+      <button type="submit" formaction="/registeruser">Register</button>
     </form>
     <div id="errormessages"></div>
     <div id="successmessage"></div>
