--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
       <button type="submit">Login User</button>
       <button type="submit" formaction="/registeruser">Register</button>
     </form>
-    <div id="errormessages"></div>
-    <div id="successmessage"></div>
     <footer>
       <p><sup>&copy;</sup>Frontend Homepage 2024</p>
       <p>All rights reserved | Powered by Frontend Homepage | Built with love and passion</p>
       <p>Version 1.0.0 | All trademarks and copyrights are reserved</p>
       <p>Website built using HTML and JavaScript</p>
     </footer>
+    <script src="/script"></script>
   </body>
 </html>
