--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
       <p>Version 1.0.0 | All trademarks and copyrights are reserved</p>
       <p>Website built using HTML and JavaScript</p>
     </footer>
-    <script src="/script"></script>
+    <script src="./Script/index-script.js"></script>
   </body>
 </html>
