--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       <h1>Welcome to Frontend Homepage</h1>
     </header>
     <form action="/loginuser" method="post">
-      <p>
+      <div>
         <label for="username">UserName:</label>
         <input type="text" id="username" name="username" required />
-      </p>
-      <p>
+      </div>
+      <div>
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required />
-      </p>
+      </div>
       <button type="submit">Login User</button>
       <button type="submit" formaction="/registeruser">Register</button>
     </form>
