--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="password" id="password" name="password" required />
       </div>
       <button type="submit">Login User</button>
-      <button type="submit" formaction="/registeruser">Register</button>
+      <button type="submit" formaction="/registeruser">Register User</button>
     </form>
     <footer>
       <p><sup>&copy;</sup>Frontend Homepage 2024</p>
