--- a/selectpassword.html
+++ b/selectpassword.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register User</title>
-</head>
-<body>
-  <h1>Register User Password</h1>
-  <form action="" method="post">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Register User</title>
+  </head>
+  <body>
+    <header>
+      <h1>Check User Password</h1>
+    </header>
+    <form action="/selectpassword" method="post">
+      <div>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required />
+      </div>
+      <div>
+        <button type="submit">Check password</button>
+      </div>
+    </form>
     <div>
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required>
+      <a href="index.html">Home</a>
     </div>
-    <div>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
-    </div>
-    <div>
-      <button type="submit">Register</button>
-    </div>
-    <div>
-      <a href="index.html">Already have an account? Login</a>
-    </div>
-  </form>
-</body>
+  </body>
 </html>
