--- a/selectpassword.html
+++ b/selectpassword.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register User</title>
+    <title>Check User</title>
   </head>
   <body>
     <header>
       <h1>Check User Password</h1>
     </header>
-    <form action="/selectpassword" method="post">
-      <div>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required />
-      </div>
-      <div>
-        <button type="submit">Check password</button>
-      </div>
-    </form>
+    <div>
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required />
+    </div>
+    <div>
+      <button id="btnpassword">Check password</button>
+    </div>
     <div>
       <a href="index.html">Home</a>
     </div>
+    <div id="savedpassword"></div>
+    <script src="./Script/savedpassword-script.js"></script>
   </body>
 </html>
