--- a/selectpassword.html
+++ b/selectpassword.html
@@ -14,12 +14,12 @@
       <input type="text" id="username" name="username" required />
     </div>
     <div>
-      <button id="btnpassword">Check password</button>
+      <button type="button" id="btnpassword">Check password</button>
     </div>
     <div>
       <a href="index.html">Home</a>
     </div>
     <div id="savedpassword"></div>
-    <script src="./Script/savedpassword-script.js"></script>
+    <script type="text/javascript" src="./Script/savedpassword-script.js"></script>
   </body>
 </html>
