--- a/selectpassword.html
+++ b/selectpassword.html
@@ -20,6 +20,6 @@
       <a href="index.html">Home</a>
     </div>
     <div id="savedpassword"></div>
-    <script type="text/javascript" src="./Script/savedpassword-script.js"></script>
+    <script type="text/javascript" src="savedpassword-script.js"></script>
   </body>
 </html>
