--- a/selectpassword.html
+++ b/selectpassword.html
@@ -9,17 +9,17 @@
     <header>
       <h1>Check User Password</h1>
     </header>
-    <div>
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required />
-    </div>
-    <div>
-      <button type="button" id="btnpassword">Check password</button>
-    </div>
+    <form action="/selectpassword" method="post">
+      <div>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required />
+      </div>
+      <div>
+        <button type="submit">Check password</button>
+      </div>
+    </form>
     <div>
       <a href="index.html">Home</a>
     </div>
-    <div id="savedpassword"></div>
-    <script type="text/javascript" src="savedpassword-script.js"></script>
   </body>
 </html>
