--- a/loginuser.html
+++ b/loginuser.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login User</title>
+    <title>Vip User</title>
   </head>
   <body>
     <header>
-      <h1>Welcome to Login User Page</h1>
+      <h1>Welcome to Vip User Page</h1>
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
