--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <h1>Welcome to Frontend Homepage</h1>
     </header>
-    <form action="/loginuser" method="post">
+    <form action="/vipuser" method="post">
       <div>
         <label for="username">UserName:</label>
         <input type="text" id="username" name="username" required />
