--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required />
       </div>
-      <button type="submit">Login User</button>
-      <button type="submit" formaction="/registeruser">Register User</button>
+      <button type="submit" id="login">Login User</button>
+      <button type="submit" id="register" formaction="/registeruser">Register User</button>
     </form>
     <footer>
       <p><sup>&copy;</sup>Frontend Homepage 2024</p>
